validate post body
