# backend/docs/swagger.json
@@ -57,6 +57,55 @@
                 }
             }
         },
+        "/api/stations": {
+            "post": {
+                "description": "POST api/stations to add new station.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Stations"
+                ],
+                "summary": "Add new station.",
+                "parameters": [
+                    {
+                        "description": "New station",
+                        "name": "addStationRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/types.StationRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/types.Station"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/stations/page/{page}": {
             "get": {
                 "description": "GET /api/stations/{page} returns 10 * page amount of stations.",
@@ -162,6 +211,10 @@
     "definitions": {
         "types.Coordinates": {
             "type": "object",
+            "required": [
+                "x",
+                "y"
+            ],
             "properties": {
                 "x": {
                     "type": "number"
@@ -246,6 +299,39 @@
                 },
                 "returns": {
                     "type": "integer"
+                }
+            }
+        },
+        "types.StationRequest": {
+            "type": "object",
+            "required": [
+                "address",
+                "city",
+                "coordinates",
+                "id",
+                "name"
+            ],
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "capacity": {
+                    "type": "integer"
+                },
+                "city": {
+                    "type": "string"
+                },
+                "coordinates": {
+                    "$ref": "#/definitions/types.Coordinates"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "operator": {
+                    "type": "string"
                 }
             }
         }
